<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RecordLine</string>
    <string name="pathplay">轨迹回放</string>
    <string name="addpoi">增加兴趣点</string>


    <!--about me-->
    <string name="not_login">尚未登陆</string>
    <string name="offline_map">离线地图</string>
    <string name="path">轨迹</string>
    <string name="poi_point">兴趣点</string>
    <string name="auto_sync">自动同步</string>
    <string name="auto_update">自动更新</string>
    <string name="message">消息</string>
    <string name="mapNormal">城市地图</string>
    <string name="mapSate">卫星地图</string>
</resources>
